--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "mutaig"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Rémi Germe <remi.germe@gmail.com>"]
 edition = "2024"
-description = "A library for mutable AIGs."
+description = "Mutable AIGs designed for equivalence checking."
 documentation = "https://docs.rs/mutaig"
 readme = "README.md"
 repository = "https://github.com/remigerme/mutaig"
